esp-deauther/build/log/idf_py_stderr_output_9137
Command: make -j 10 all
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c: In function 'app_main':
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:22:5: error: implicit declaration of function 'esp_netif_create_default_wifi_ap'; did you mean 'esp_netif_get_default_netif'? [-Wimplicit-function-declaration]
   22 |     esp_netif_create_default_wifi_ap();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     esp_netif_get_default_netif
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:25:5: error: unknown type name 'wifi_init_config_t'; did you mean 'wifi_ant_config_t'?
   25 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT(); // create default config here and alter config later
      |     ^~~~~~~~~~~~~~~~~~
      |     wifi_ant_config_t
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:25:30: error: implicit declaration of function 'WIFI_INIT_CONFIG_DEFAULT' [-Wimplicit-function-declaration]
   25 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT(); // create default config here and alter config later
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/danny/esp-idf/components/esp_event/include/esp_event.h:10,
                 from /home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:3:
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:26:21: error: implicit declaration of function 'esp_wifi_init'; did you mean 'esp_libc_init'? [-Wimplicit-function-declaration]
   26 |     ESP_ERROR_CHECK(esp_wifi_init(&cfg));
      |                     ^~~~~~~~~~~~~
/home/danny/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/danny/esp-idf/projects/esp-deauther/main/esp-deauther.c:27:5: error: implicit declaration of function 'esp_wifi_set_mode' [-Wimplicit-function-declaration]
   27 |     esp_wifi_set_mode(WIFI_MODE_AP); // set mode in order to use alter AP configs
      |     ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp-deauther.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
